[package]
name = "oauth-redirect-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.8"
proxy-wasm = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"